# opengl-playground

./: .gitignore  .gitmodules  CMakeLists.txt  main_file.cpp
src/: camera.cpp  camera.h  common.cpp  common.h  constants.h  game.cpp  game.h  sh_f.glsl  sh_g.glsl  sh_v.glsl  shaderprogram.cpp  shaderprogram.h
src/models/: blocks.cpp  blocks.h  board.cpp  board.h  cuboidGenerator.cpp  cuboidGenerator.h  figure.cpp  figure.h  model.cpp  model.h  model_asset.h
